Fixed typos, and removed some forgotten placeholders.

--- a/tutorial_TeX/RB_PosteriorPrediction_Tutorial/RB_PosteriorPrediction_Tutorial_content.tex
+++ b/tutorial_TeX/RB_PosteriorPrediction_Tutorial/RB_PosteriorPrediction_Tutorial_content.tex
@@ -484,7 +484,7 @@ The current version of this script generates several summary statistics:
 \end{itemize}
 
 The quantiles and Mean RF are calculated using the unweighted Robinson-Foulds distances calculated in a pairwise fashion
-between all trees in a posterior distribution (Fig. 2). ADDD MORE HERE
+between all trees in a posterior distribution (Fig. 2).
 
 \newpage
 
@@ -497,7 +497,7 @@ between all trees in a posterior distribution (Fig. 2). ADDD MORE HERE
 \end{centering}
 
 \smallbreak
-In this case, statistical entropy is analogous to the uncertaintiy associated 
+In this case, statistical entropy is analogous to the uncertainty associated 
 with sampling from the prior or posterior. As the data provide more information and the posterior probabilities of various topologies
 become increasingly uneven, entropy decreases causing the difference between the entropy of the prior and the posterior to increase.
 Assuming a uniform prior on topologies, the change in entropy can be calculated as:
