--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_0_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_0_content.tex
@@ -1,7 +1,7 @@
 \subsection{Introduction}
 
 Many fundamental evolutionary processes, such as adaptation, speciation, and extinction, operate in a spatial context. 
-Although we cannot often view this spatial context directly, ancestral ranges may be reconstructed through historical biogeographic analyses.
+When the historical aspect of this spatial context cannot be observed directly, as is often the case, biogeographic inference may be applied to estimate ancestral species ranges.
 This works by leveraging phylogenetic, molecular, and geographical information to model species distributions as the outcome of biogeographic processes.
 How to best model these processes requires special consideration, such as how ranges are inherited following speciation events, how geological events might influence dispersal rates, and what factors affect rates of dispersal and extirpation.
 A major technical challenge of modeling range evolution is how to translate these natural processes into stochastic processes that remain tractable for inference.
