clean subsection headers

--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_0_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_0_content.tex
@@ -1,4 +1,4 @@
-\subsection{Introduction}
+\subsection*{Introduction}
 
 Many fundamental evolutionary processes, such as adaptation, speciation, and extinction, operate in a spatial context. 
 When the historical aspect of this spatial context cannot be observed directly, as is often the case, biogeographic inference may be applied to estimate ancestral species ranges.
@@ -7,7 +7,7 @@ How to best model these processes requires special consideration, such as how ra
 A major technical challenge of modeling range evolution is how to translate these natural processes into stochastic processes that remain tractable for inference.
 This tutorial provides a brief background in some of these models, then describes how to perform Bayesian inference of historical biogeography using \RevBayes.
 
-\subsection{Contents}
+\subsection*{Contents}
 
 The Historical Biogeography guide contains several tutorials
 
@@ -18,7 +18,7 @@ The Historical Biogeography guide contains several tutorials
 \item Section \ref{sec:bg_phylo}: Biogeographic dating using DEC
 \end{itemize}
 
-\subsection{Recommended tutorials}
+\subsection*{Recommended tutorials}
 
 The Historical Biogeography tutorials assume the reader is familiar with the content covered in the following \RevBayes tutorials
 
