--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_2_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_2_content.tex
@@ -302,7 +302,7 @@ Build a maximum clade credibility tree from the posterior tree distribution, dis
 
 \begin{snugshade}
 \begin{lstlisting}
-tree_trace = readTreeTrace(file=out_phy_fn, treetype="clock")
+tree_trace = readTreeTrace(file=out_tree_fn, treetype="clock")
 tree_trace.setBurnin(0.25)
 \end{lstlisting}
 \end{snugshade}
