--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
@@ -1,7 +1,7 @@
 \section{Overview of the Dispersal-Extinction-Cladogenesis model} \label{sec:bg_intro2}
 
 The Dispersal-Extinction-Cladogenesis (DEC) process models range evolution as a discrete-valued process \citep{Ree2005, Ree2008}.
-There are three key components to understanding the DEC model: range characters, anagenetic range evolution, and cladogenetic range evolution (Fig \ref{fig:dec_cartoon}).
+There are three key components to understanding the DEC model: range characters, anagenetic range evolution, and cladogenetic range evolution (Figure \ref{fig:dec_cartoon}).
 
 \begin{figure}[!h]
 \centering
@@ -55,7 +55,7 @@ The decimal representation of range states is rarely used in discussion, but it 
 
 
 In the context of the DEC model, anagenesis refers to range evolution that occurs between speciation events within lineages.
-There are two types of anagenetic events, dispersal (Fig \ref{fig:dec_cartoon}a) and (local) extinction or exitrpation (Fig \ref{fig:dec_cartoon}b).
+There are two types of anagenetic events, dispersal (Figure \ref{fig:dec_cartoon}a) and (local) extinction or exitrpation (Figure \ref{fig:dec_cartoon}b).
 Because DEC uses discrete-valued ranges, anagenesis is modeled using a continuous-time Markov chain.
 This, in turn, allows us to compute transition probability of a character changing from $i$ to $j$ in time $t$ through matrix exponentiation
 \[
@@ -171,18 +171,18 @@ The {\tt nullRange=``Include''} setting provides no special handling of the null
 
 \subsection{Cladogenetic range evolution}
 
-The cladogenetic component of the DEC model describes evolutionary change accompanying speciation events (Fig \ref{fig:dec_cartoon}c--g).
+The cladogenetic component of the DEC model describes evolutionary change accompanying speciation events (Figure \ref{fig:dec_cartoon}c--g).
 In the context of range evolution, daughter species do not necessarily inherit their ancestral range in an identical manner.
 For each internal node in the reconstructed tree, one of several cladogenetic events can occur, some of which are described below.
 
 Beginning with the simplest case first, suppose the range of a species is $A$ the moment before speciation occurs at an internal phylogenetic node.
 Since the species range is size one, both daughter lineages necessarily inherit the ancestral species range ($A$).
-In DEC parlance, this is called a narrow sympatry event (Fig \ref{fig:dec_cartoon}c).
+In DEC parlance, this is called a narrow sympatry event (Figure \ref{fig:dec_cartoon}c).
 Now, suppose the ancestral range is $ABC$.
-Under subset sympatry, one lineage identically inherits the ancestral species range, $ABC$, while the other lineage inherits only a single area, i.e. only $A$ or $B$ or $C$ (Fig \ref{fig:dec_cartoon}d).
-Under allopatric cladogenesis, the ancestral range is split evenly among daughter lineages, e.g. one lineage may inherit $AB$ and the other inherits $C$ (Fig \ref{fig:dec_cartoon}e).
-For widespread sympatric cladogenesis, both lineages inherit the ancestral range, $ABC$ (Fig \ref{fig:dec_cartoon}f).
-Finally, supposing the ancestral range is $A$, jump dispersal cladogenesis results in one daughter lineage inheriting the ancestral range $A$, and the other daughter lineage inheriting a previously uninhabited area, $B$ or $C$ (Fig \ref{fig:dec_cartoon}g).
+Under subset sympatry, one lineage identically inherits the ancestral species range, $ABC$, while the other lineage inherits only a single area, i.e. only $A$ or $B$ or $C$ (Figure \ref{fig:dec_cartoon}d).
+Under allopatric cladogenesis, the ancestral range is split evenly among daughter lineages, e.g. one lineage may inherit $AB$ and the other inherits $C$ (Figure \ref{fig:dec_cartoon}e).
+For widespread sympatric cladogenesis, both lineages inherit the ancestral range, $ABC$ (Figure \ref{fig:dec_cartoon}f).
+Finally, supposing the ancestral range is $A$, jump dispersal cladogenesis results in one daughter lineage inheriting the ancestral range $A$, and the other daughter lineage inheriting a previously uninhabited area, $B$ or $C$ (Figure \ref{fig:dec_cartoon}g).
 See \citet{Matzke2012} for an excellent overview of the cladogenetic state transitions described in the literature.
 
 Make the cladogenetic probability event matrix
