fixing intervals typo

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -651,7 +651,7 @@ So let's represent the likelihood using a uniform random variable uniformly dist
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-for(i in 1:intervals())
+for(i in 1:intervals.size())
 {
     taxon  = intervals[i][1]
     a_i = intervals[i][2]
