minor edit to TEFBD tutorial

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1340,6 +1340,9 @@ What are the fields telling you?
 %Is the age of the \textit{Kretzoiarctos beatrix} fossil the same as what was shown in {\tt Tracer}? 
 
 \QUEST What is the posterior probability that \textit{Zaragocyon daamsi} is a sampled ancestor?
+
+Another newly available web-based tree viewer is \href{http://phylogeny.io/}{Phylogeny.IO} \citep{Jovanovic2016}. 
+Try this site for a different way to view the tree.
 \end{framed}}
 
 
@@ -1355,6 +1358,7 @@ What are the fields telling you?
 \end{minipage}}
 \label{fig:IcyTreeScreenshort}
 \end{figure}
+
 
 
 %TODO IcyTree
