fixed minor issue with JC graphical model in CTMC tutorial

--- a/tutorial_TeX/RB_CTMC_Tutorial/figures/jc_graphical_model.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/figures/jc_graphical_model.tex
@@ -34,7 +34,7 @@
 \node (l1) at (4,5.25) [right]{\tt \}};
 \node (l1) at (4,4.9) [right]{\tt topology $\sim$ dnUniformTopology(taxa)};
 \node (l2) at (4,4.55) [right]{\tt psi := treeAssembly(topology, bl)};
-\node (l8) at (4,3.5) [right]{\tt Q := fnJC(4) };
+\node (l8) at (4,3.5) [right]{\tt Q <- fnJC(4) };
 \node (l9) at (4,2.6) [right]{\tt seq $\sim$ dnPhyloCTMC( tree=psi, Q=Q, type="DNA" ) };
 \node (l10) at (4,1.9) [right]{\tt seq.clamp( data ) };
 \end{tikzpicture}
