--- a/tutorial_TeX/RB_PosteriorPrediction_Tutorial/RB_PosteriorPrediction_Tutorial.tex
+++ b/tutorial_TeX/RB_PosteriorPrediction_Tutorial/RB_PosteriorPrediction_Tutorial.tex
@@ -10,7 +10,7 @@
 \thispagestyle{plain}
 \begin{center}
 
-\textbf{\LARGE Assessing Phylogenetic Reliability Using \RevBayes}\\\vspace{2mm}
+\textbf{\LARGE Assessing Phylogenetic Reliability Using \RevBayes and P^{3}}\\\vspace{2mm}
 \textbf{\it{\Large Model adequacy testing using posterior prediction}}\\\vspace{2mm}
 \vspace{1cm}
 {\Large Lyndon M. Coghill, Sebastian H{\"o}hna and Jeremy M. Brown}
